--- a/site/catalog/catalog.html
+++ b/site/catalog/catalog.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../index.html" class="menu">Главная</a></li>
         <li>Каталог</li>
         <li>Контакты</li>
       </ul>
     </nav>
-    <h1>Каталог</h1>
-    <p>
+    <h1 class="h1">Каталог</h1>
+    <p class="p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, dicta!
       Voluptatem a animi, numquam voluptate tempora et labore accusamus
       distinctio sequi, repellat rem ipsam alias tenetur quo soluta assumenda.
