--- a/site/index.html
+++ b/site/index.html
@@ -5,36 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
       <ul>
         <li>Главная</li>
-        <li><a href="catalog/catalog.html">Каталог</a></li>
+        <li><a href="catalog/catalog.html" class="menu">Каталог</a></li>
         <li>Контакты</li>
       </ul>
     </nav>
-    <h1>Главная страница</h1>
-    <p>
+    <h1 class="h1">Главная страница</h1>
+    <p class="p">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores officiis
       neque expedita et, vel deserunt cupiditate similique beatae molestias,
       eligendi debitis, voluptatibus ipsum animi. A odio qui cumque fugit
       accusantium?
     </p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>
+    <h2 class="h2">Добро пожаловать на сайт</h2>
+    <p class="p">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non
       laboriosam sequi, beatae commodi nostrum quaerat possimus cumque dolore
       odio? Consequatur nisi dicta labore similique facilis explicabo temporibus
       repudiandae aspernatur.
     </p>
-    <p>
+    <p class="p">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia
       eligendi beatae dicta officiis, cumque, natus harum enim quas in sed
       maxime nihil corporis corrupti tempora veritatis magnam voluptatum eos
       quos!
     </p>
-    <p>
+    <p class="p">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ullam
       molestias omnis quam minus laboriosam atque ipsum, voluptatibus obcaecati
       neque sunt minima quos perferendis in quis excepturi eaque ipsa voluptas.
