--- a/hw4/index.html
+++ b/hw4/index.html
@@ -12,33 +12,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="slyle.css" />
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
-      <div class="menu">
+    <div class="page">
+      <div class="header">
         <a href="#"><img src="img/Logo.svg" alt="Logo" /></a>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Service</a>
-        <a href="#">Features</a>
-        <a href="#">Team</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </div>
-    </div>
-    <div class="top">
-      <div class="top__text">
-        <h1 class="heading">SEO & Digital Marketing For Your Website.</h1>
-        <p class="p__text">
-          Provide all kind of seo services and help to improve seo ranking.
-          Globally incubate standards.
-        </p>
-        <div class="buttons">
-          <a href="#">Start Now</a>
-          <a href="#">Watch</a>
+        <div class="menu">
+          <a class = "home" href="#">Home</a>
+          <a class= "menu__item" href="#">About Us</a>
+          <a class= "menu__item" href="#">Service</a>
+          <a class= "menu__item" href="#">Features</a>
+          <a class= "menu__item" href="#">Team</a>
+          <a class= "menu__item" href="#">Blog</a>
+          <a class= "menu__item" href="#">Contact</a>
         </div>
       </div>
-      <img src="img/Image.svg" alt="image" />
+      <div class="top">
+        <div class="top__text">
+          <h1 class="heading">SEO & Digital Marketing For Your Website.</h1>
+          <p class="p__text">
+            Provide all kind of seo services and help to improve seo ranking.
+            Globally incubate standards.
+          </p>
+          <div class="buttons">
+            <a class="start" href="#">Start Now</a>
+            <a class="watch" href="#">Watch</a>
+          </div>
+        </div>
+        <img class="img" src="img/Image.svg" alt="image" />
+      </div>
     </div>
     <div class="footer">
       <img src="img/1.png" alt="1" />
