--- a/hw6/index.html
+++ b/hw6/index.html
@@ -35,8 +35,11 @@
         <div class="h1__block">
           <img src="img/h1__img.svg" alt="h1" class="img__h1" />
           <h1 class="h1__top">
-            THE BRAND <span class="word1">OF LUXERIOUS</span>
-            <span class="word2">FASHION</span>
+            THE BRAND
+            <p>
+              <span class="word1">OF LUXERIOUS</span>
+              <span class="word2">FASHION</span>
+            </p>
           </h1>
         </div>
       </div>
@@ -44,9 +47,9 @@
       <div class="contents">
         <div class="content1">
           <div class="block1">
-            <p class="p__content1 p__content1__1">
-              30% OFF <span class="span__c1">FOR WOMEN</span>
-            </p>
+            <div class="p__content1 p__content1__1">
+              30% OFF <p><span class="span__c1">FOR WOMEN</span></p>
+            </div>
           </div>
           <div class="block2">
             <p class="p__content1 p__content1__2">
@@ -54,9 +57,9 @@
             </p>
           </div>
           <div class="block3">
-            <p class="p__content1 p__content1__3">
-              NEW ARRIVALS <span class="span__c1">FOR KIDS</span>
-            </p>
+            <div class="p__content1 p__content1__3">
+              NEW ARRIVALS <p><span class="span__c1">FOR KIDS</span></p>
+            </div>
           </div>
           <div class="block4"></div>
         </div>
@@ -129,6 +132,7 @@
               </p>
               <p class="p__price">$52.00</p>
             </div>
+
           </div>
           <p class="p__end__c2">Browse All Product</p>
         </div>
