--- a/hw6/index.html
+++ b/hw6/index.html
@@ -29,6 +29,9 @@
         <a href="#" class="a__header3"
           ><img src="img/Buttons.svg" alt="img3" class="img3"
         /></a>
+        <a href="#" class="a__header4"
+          ><img src="img/Forma 1.svg" alt="img4" class="img4"
+        /></a>
       </div>
       <div class="top">
         <img src="img/img__top.png" alt="top" class="img__top" />
@@ -48,7 +51,8 @@
         <div class="content1">
           <div class="block1">
             <div class="p__content1 p__content1__1">
-              30% OFF <p><span class="span__c1">FOR WOMEN</span></p>
+              30% OFF
+              <p><span class="span__c1">FOR WOMEN</span></p>
             </div>
           </div>
           <div class="block2">
@@ -58,7 +62,8 @@
           </div>
           <div class="block3">
             <div class="p__content1 p__content1__3">
-              NEW ARRIVALS <p><span class="span__c1">FOR KIDS</span></p>
+              NEW ARRIVALS
+              <p><span class="span__c1">FOR KIDS</span></p>
             </div>
           </div>
           <div class="block4"></div>
@@ -132,7 +137,6 @@
               </p>
               <p class="p__price">$52.00</p>
             </div>
-
           </div>
           <p class="p__end__c2">Browse All Product</p>
         </div>
