--- a/hw6/index.html
+++ b/hw6/index.html
@@ -1,3 +1,8 @@
+<!-- * Добавляем весь контент подвала сайта.
+* Создаём планшетную версию проекта.
+* Создаем мобильную версию проекта.
+* Добавляем эффекты наведения. -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,130 +22,240 @@
   </head>
   <body>
     <div class="page">
-      <div class="header">
-        <div class="logo__block">
-          <a href="#" class="a__header1"
-            ><img src="img/logo.png" alt="img1" class="img1"
+      <header>
+        <div class="header">
+          <div class="logo__block">
+            <a href="#" class="a__header1"
+              ><img src="img/logo.png" alt="img1" class="img1"
+            /></a>
+            <a href="#" class="a__header2"
+              ><img src="img/search.svg" alt="img2" class="img2"
+            /></a>
+          </div>
+          <a href="#" class="a__header3"
+            ><img src="img/Buttons.svg" alt="img3" class="img3"
           /></a>
-          <a href="#" class="a__header2"
-            ><img src="img/search.svg" alt="img2" class="img2"
+          <a href="#" class="a__header4"
+            ><img src="img/Forma 1.svg" alt="img4" class="img4"
           /></a>
         </div>
-        <a href="#" class="a__header3"
-          ><img src="img/Buttons.svg" alt="img3" class="img3"
-        /></a>
-        <a href="#" class="a__header4"
-          ><img src="img/Forma 1.svg" alt="img4" class="img4"
-        /></a>
-      </div>
-      <div class="top">
-        <img src="img/img__top.png" alt="top" class="img__top" />
-        <div class="h1__block">
-          <img src="img/h1__img.svg" alt="h1" class="img__h1" />
-          <h1 class="h1__top">
-            THE BRAND
-            <p>
-              <span class="word1">OF LUXERIOUS</span>
-              <span class="word2">FASHION</span>
-            </p>
-          </h1>
-        </div>
-      </div>
-
-      <div class="contents">
-        <div class="content1">
-          <div class="block1">
-            <div class="p__content1 p__content1__1">
-              30% OFF
-              <p><span class="span__c1">FOR WOMEN</span></p>
-            </div>
-          </div>
-          <div class="block2">
-            <p class="p__content1 p__content1__2">
-              HOT DEAL <span class="span__c1">FOR MEN</span>
-            </p>
-          </div>
-          <div class="block3">
-            <div class="p__content1 p__content1__3">
-              NEW ARRIVALS
-              <p><span class="span__c1">FOR KIDS</span></p>
-            </div>
-          </div>
-          <div class="block4"></div>
-        </div>
-        <div class="content2">
-          <h3 class="h3__content2">Fetured Items</h3>
-          <p class="p__content2">
-            Shop for items based on what we featured in this week
-          </p>
-          <div class="blocks__content2">
-            <div class="block__c2 block1__c2">
-              <img src="img/5.jpg" alt="5" class="img__c2 img1__c2" />
-              <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
-              <p class="p__c2">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda
-                Operandi.
+      </header>
+      <main>
+        <div class="top">
+          <img src="img/img__top.png" alt="top" class="img__top" />
+          <div class="h1__block">
+            <img src="img/h1__img.svg" alt="h1" class="img__h1" />
+            <h1 class="h1__top">
+              THE BRAND
+              <p>
+                <span class="word1">OF LUXERIOUS</span>
+                <span class="word2">FASHION</span>
               </p>
-              <p class="p__price">$52.00</p>
-            </div>
-            <div class="block__c2 block2__c2">
-              <div class="div__img2__c2">
-                <img src="img/6.png" alt="6" class="img__c2 img2__c2" />
+            </h1>
+          </div>
+        </div>
+        <div class="contents">
+          <div class="content1">
+            <div class="block1">
+              <div class="p__content1 p__content1__1">
+                30% OFF
+                <p><span class="span__c1">FOR WOMEN</span></p>
               </div>
+            </div>
+            <div class="block2">
+              <p class="p__content1 p__content1__2">
+                HOT DEAL <span class="span__c1">FOR MEN</span>
+              </p>
+            </div>
+            <div class="block3">
+              <div class="p__content1 p__content1__3">
+                NEW ARRIVALS
+                <p><span class="span__c1">FOR KIDS</span></p>
+              </div>
+            </div>
+            <div class="block4"></div>
+          </div>
+          <div class="content2">
+            <h3 class="h3__content2">Fetured Items</h3>
+            <p class="p__content2">
+              Shop for items based on what we featured in this week
+            </p>
+            <div class="blocks__content2">
+              <div class="block__c2 block1__c2">
+                <img src="img/5.jpg" alt="5" class="img__c2 img1__c2" />
+                <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
+                <p class="p__c2">
+                  Known for her sculptural takes on traditional tailoring,
+                  Australian arbiter of cool Kym Ellery teams up with Moda
+                  Operandi.
+                </p>
+                <p class="p__price">$52.00</p>
+              </div>
+              <div class="block__c2 block2__c2">
+                <div class="div__img2__c2">
+                  <img src="img/6.png" alt="6" class="img__c2 img2__c2" />
+                </div>
 
-              <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
-              <p class="p__c2">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda
-                Operandi.
-              </p>
-              <p class="p__price">$52.00</p>
+                <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
+                <p class="p__c2">
+                  Known for her sculptural takes on traditional tailoring,
+                  Australian arbiter of cool Kym Ellery teams up with Moda
+                  Operandi.
+                </p>
+                <p class="p__price">$52.00</p>
+              </div>
+              <div class="block__c2 block3__c2">
+                <img src="img/7.png" alt="7" class="img__c2 img3__c2" />
+                <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
+                <p class="p__c2">
+                  Known for her sculptural takes on traditional tailoring,
+                  Australian arbiter of cool Kym Ellery teams up with Moda
+                  Operandi.
+                </p>
+                <p class="p__price">$52.00</p>
+              </div>
+              <div class="block__c2 block4__c2">
+                <img src="img/8.png" alt="8" class="img__c2 img4__c2" />
+                <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
+                <p class="p__c2">
+                  Known for her sculptural takes on traditional tailoring,
+                  Australian arbiter of cool Kym Ellery teams up with Moda
+                  Operandi.
+                </p>
+                <p class="p__price">$52.00</p>
+              </div>
+              <div class="block__c2 block5__c2">
+                <img src="img/9.png" alt="9" class="img__c2 img5__c2" />
+                <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
+                <p class="p__c2">
+                  Known for her sculptural takes on traditional tailoring,
+                  Australian arbiter of cool Kym Ellery teams up with Moda
+                  Operandi.
+                </p>
+                <p class="p__price">$52.00</p>
+              </div>
+              <div class="block__c2 block6__c2">
+                <img src="img/10.png" alt="10" class="img__c2 img6__c2" />
+                <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
+                <p class="p__c2">
+                  Known for her sculptural takes on traditional tailoring,
+                  Australian arbiter of cool Kym Ellery teams up with Moda
+                  Operandi.
+                </p>
+                <p class="p__price">$52.00</p>
+              </div>
             </div>
-            <div class="block__c2 block3__c2">
-              <img src="img/7.png" alt="7" class="img__c2 img3__c2" />
-              <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
-              <p class="p__c2">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda
-                Operandi.
-              </p>
-              <p class="p__price">$52.00</p>
+            <p class="p__end__c2">Browse All Product</p>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <section class="top__footer">
+          <div class="div__top__footer1">
+            <img
+              src="img/top_footer$ (3).svg"
+              alt="img__top__footer1"
+              class="img__top__footer1"
+            />
+            <h3 class="h3__top__footer1">Free Delivery</h3>
+            <p class="p__top__footer">
+              Worldwide delivery on all. Authorit tively morph next-generation
+              innov tion with extensive models.
+            </p>
+          </div>
+          <div class="div__top__footer2">
+            <img
+              src="img/top_footer$ (2).svg"
+              alt="img__top__footer2"
+              class="img__top__footer2"
+            />
+            <h3 class="h3__top__footer2">Sales & discounts</h3>
+            <p class="p__top__footer">
+              Worldwide delivery on all. Authorit tively morph next-generation
+              innov tion with extensive models.
+            </p>
+          </div>
+          <div class="div__top__footer3">
+            <img
+              src="img/top_footer$ (1).svg"
+              alt="img__top__footer3"
+              class="img__top__footer3"
+            />
+            <h3 class="h3__top__footer3">Quality assurance</h3>
+            <p class="p__top__footer">
+              Worldwide delivery on all. Authorit tively morph next-generation
+              innov tion with extensive models.
+            </p>
+          </div>
+        </section>
+        <section class="main__footer">
+          <img
+            src="img/Layer 41.png"
+            alt="bg__main__footer"
+            class="bg__main__footer"
+          />
+          <div class="div__main__footer1">
+            <img
+              src="img/Intersect.png"
+              alt="img__main__footer"
+              class="img__main__footer1"
+            />
+            <p class="p__main__footer1">
+              “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+              <span class="word1__main__footer"
+                >a pulvinar purus condimentum</span
+              >“
+            </p>
+          </div>
+          <div class="div__main__footer2">
+            <p class="word2__main__footer">SUBSCRIBE</p>
+            <p class="p__main__footer2">FOR OUR NEWLETTER AND PROMOTION</p>
+            <form action="#">
+              <input
+                type="email"
+                placeholder="   Enter Your Email"
+                class="input__main__footer"
+              />
+              <button type="submit">Subscribe</button>
+            </form>
+          </div>
+        </section>
+        <section class="down__footer">
+          <div class="div__down__footer1">
+            <p class="p__down__footer">© 2022 Brand All Rights Reserved.</p>
+          </div>
+          <div class="div__down__footer2">
+            <div class="div__img__div__down__footer">
+              <img
+                src="img/facebook-f-brands (3) 1.svg"
+                alt="img__div__down__footer1"
+                class="img__div__down__footer1"
+              />
             </div>
-            <div class="block__c2 block4__c2">
-              <img src="img/8.png" alt="8" class="img__c2 img4__c2" />
-              <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
-              <p class="p__c2">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda
-                Operandi.
-              </p>
-              <p class="p__price">$52.00</p>
+            <div class="div__img__div__down__footer2">
+              <img
+                src="img/instagram-brands 1.svg"
+                alt="img__div__down__footer2"
+                class="img__div__down__footer2"
+              />
             </div>
-            <div class="block__c2 block5__c2">
-              <img src="img/9.png" alt="9" class="img__c2 img5__c2" />
-              <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
-              <p class="p__c2">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda
-                Operandi.
-              </p>
-              <p class="p__price">$52.00</p>
+            <div class="div__img__div__down__footer">
+              <img
+                src="img/pinterest-p-brands 1.svg"
+                alt="img__div__down__footer3"
+                class="img__div__down__footer3"
+              />
             </div>
-            <div class="block__c2 block6__c2">
-              <img src="img/10.png" alt="10" class="img__c2 img6__c2" />
-              <p class="p__main__c2">ELLERY X M'O CAPSULE</p>
-              <p class="p__c2">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda
-                Operandi.
-              </p>
-              <p class="p__price">$52.00</p>
+            <div class="div__img__div__down__footer">
+              <img
+                src="img/twitter-brands 1.svg"
+                alt="img__div__down__footer4"
+                class="img__div__down__footer4"
+              />
             </div>
           </div>
-          <p class="p__end__c2">Browse All Product</p>
-        </div>
-      </div>
+        </section>
+      </footer>
     </div>
   </body>
 </html>
