--- a/hw2.1/index.html
+++ b/hw2.1/index.html
@@ -1,5 +1,3 @@
-<!-- Не забываем, что у вас уже готова шапка сайта и подвал страницы, плюс у вас уже есть блок из 3х товаров, осталось добавить изображение и под ним описание
-Адаптив создавать не нужно, только десктопную версию -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -169,7 +167,8 @@
                 </p>
               </div>
               <div class="button__c1">
-                <svg
+                <!-- <img src="img/box_add_cart.svg" alt="box__button__c1" class="box__button__c1"> -->
+                <!-- <svg
                   width="212"
                   height="49"
                   viewBox="0 0 212 49"
@@ -181,7 +180,7 @@
                     d="M211.5 0.598145H0.5V47.9958H211.5V0.598145Z"
                     stroke="#FF6A6A"
                   />
-                </svg>
+                </svg> -->
                 <div class="button__content">
                   <svg
                   width="27"
