--- a/hw2.2/catalog.html
+++ b/hw2.2/catalog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/hw2.2/styles/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -47,13 +47,14 @@
             <div class="filter-sort">
               <details class="filter">
                 <summary class="filter__summary">
-                  <span> FILTER</span
+                  <span>FILTER</span
                   ><svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="15"
                     height="10"
                     viewBox="0 0 15 10"
                     fill="none"
+                    class="svg__summary"
                   >
                     <path
                       d="M0.833333 10H4.16667C4.625 10 5 9.625 5 9.16667C5 8.70833 4.625 8.33333 4.16667 8.33333H0.833333C0.375 8.33333 0 8.70833 0 9.16667C0 9.625 0.375 10 0.833333 10ZM0 0.833333C0 1.29167 0.375 1.66667 0.833333 1.66667H14.1667C14.625 1.66667 15 1.29167 15 0.833333C15 0.375 14.625 0 14.1667 0H0.833333C0.375 0 0 0.375 0 0.833333ZM0.833333 5.83333H9.16667C9.625 5.83333 10 5.45833 10 5C10 4.54167 9.625 4.16667 9.16667 4.16667H0.833333C0.375 4.16667 0 4.54167 0 5C0 5.45833 0.375 5.83333 0.833333 5.83333Z"
@@ -61,10 +62,35 @@
                     />
                   </svg>
                 </summary>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Asperiores accusantium a sit ad, nesciunt amet, enim at
-                veritatis ratione minima autem harum ipsa id perferendis
-                praesentium ex facere quia libero.
+                <details class="filter__item">
+                  <summary>
+                    <span class="item__summary">CATEGORY</span>
+                  </summary>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Asperiores accusantium a sit ad, nesciunt amet, enim at
+                  veritatis ratione minima autem harum ipsa id perferendis
+                  praesentium ex facere quia libero.
+                </details>
+                <!-- <details class="filter">
+                  <summary class="filter__item">
+                    <span>BRAND</span
+                    >
+                  </summary>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Asperiores accusantium a sit ad, nesciunt amet, enim at
+                  veritatis ratione minima autem harum ipsa id perferendis
+                  praesentium ex facere quia libero.
+                </details>
+                <details class="filter">
+                  <summary class="filter__item">
+                    <span>DESIGNER</span
+                    >
+                  </summary>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Asperiores accusantium a sit ad, nesciunt amet, enim at
+                  veritatis ratione minima autem harum ipsa id perferendis
+                  praesentium ex facere quia libero.
+                </details> -->
               </details>
 
               <div class="filter__sorting">
