--- a/hw2.2/catalog.html
+++ b/hw2.2/catalog.html
@@ -16,9 +16,9 @@
     />
   </head>
   <body>
-    <div class="page center">
+    <div class="body ">
       <header>
-        <div class="header">
+        <div class="header center">
           <div class="logo__block">
             <a href="#" class="a__header1"
               ><img src="img/logo.png" alt="img1" class="img1"
@@ -36,13 +36,13 @@
         </div>
       </header>
       <main>
-        <div class="breadcrumbs">
+        <div class="breadcrumbs center">
           <h3 class="h3__breadcrumbs">NEW ARRIVALS</h3>
           <p class="p__breadcrumbs">
             HOME / MEN / <span class="span__p__breadcrumbs"> NEW ARRIVALS</span>
           </p>
         </div>
-        <section class="contents">
+        <section class="contents center">
           <div class="content2">
             <div class="filter-sort">
               <details class="filter">
@@ -63,8 +63,8 @@
                   </svg>
                 </summary>
                 <details class="filter__item">
-                  <summary>
-                    <span class="item__summary">CATEGORY</span>
+                  <summary class="item__summary">
+                    CATEGORY
                   </summary>
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Asperiores accusantium a sit ad, nesciunt amet, enim at
@@ -246,7 +246,7 @@
         </section>
       </main>
       <footer>
-        <section class="top__footer">
+        <section class="top__footer center">
           <div class="div__top__footer1">
             <img
               src="img/top_footer$ (3).svg"
@@ -284,7 +284,7 @@
             </p>
           </div>
         </section>
-        <section class="main__footer">
+        <section class="main__footer center">
           <img
             src="img/Layer 41.png"
             alt="bg__main__footer"
