mobile-index+product

--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -215,7 +215,7 @@
                 <details class="catalog__filter">
 
                   <summary class="catalog__filter__summary">
-                    <span>FILTER</span
+                    <span class="catalog__filter__summary__head">FILTER</span
                     ><svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="15"
