mobile-index+cat+prod

--- a/product/product.html
+++ b/product/product.html
@@ -232,9 +232,9 @@
                 </svg>
               </div>
 
-              <img src="/product/img/Layer 42.png" alt="product__slider" />
+              <img src="/product/img/Layer 42.png" alt="product__slider" class="product__slider__image"/>
 
-              <div class="product__arrow">
+              <div class="product__arrow product__arrow__right">
                 <svg
                   width="47"
                   height="47"
@@ -282,6 +282,7 @@
                 viewBox="0 0 642 2"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                class="product__discription__price__border"
               >
                 <path
                   d="M0.5 1.49829H641.5H0.5Z"
