mobile-index+cat+prod+cart

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -85,7 +85,7 @@
           <div class="cart">
             <div class="cart__block">
               <div>
-                <img src="/cart/img/cart1.png" alt="cart1">
+                <img src="/cart/img/cart1.png" alt="cart1" class="cart__block__image">
                   
               </div>
               <div class="cart__information">
@@ -119,7 +119,7 @@
             </div>
             <div class="cart__block">
               <div>
-                <img src="/cart/img/cart2.png" alt="cart2">
+                <img src="/cart/img/cart2.png" alt="cart2" class="cart__block__image">
               </div>
 
               <div class="cart__information">
